@@ -2015,6 +2015,8 @@ int skill_attack (int attack_type, struct block_list* src, struct block_list *ds
 			dmg.dmotion = clif_skill_damage(dsrc,bl,tick, dmg.amotion, dmg.dmotion, damage, dmg.div_, skillid, -2, 5); // needs -2(!) as skill level
 		break;
 	case WM_SEVERE_RAINSTORM_MELEE:
+		dmg.dmotion = clif_skill_damage(src,bl,tick,dmg.amotion,dmg.dmotion,damage,1,WM_SEVERE_RAINSTORM,skilllv,5);
+		break;
 	case SC_FEINTBOMB:
 		dmg.dmotion = clif_skill_damage(src,bl,tick,dmg.amotion,dmg.dmotion,damage,1,skillid,skilllv,5);
 		break;
@@ -11136,11 +11138,6 @@ int skill_castfix(struct block_list *bl, int skill_id, int skill_lv)
 	{
 		variable_time = skill_get_cast(skill_id, skill_lv) * 80/100;// 80% of casttime is variable
 		fixed_time = skill_get_cast(skill_id, skill_lv) * 20/100;// 20% of casttime is fixed
-		if( skill_id == MG_FIREBOLT || skill_id == MG_COLDBOLT || skill_id == MG_LIGHTNINGBOLT )
-		{	// 50% reduction on Bolts.
-			variable_time >>= 2;
-			fixed_time >>= 2;
-		}
 
 		// calculate variable cast time reduced by dex and int
 		if( !(skill_get_castnodex(skill_id, skill_lv)&1) )
